feat: add screen a064 and touch focaltech drivers
release sdk 2804a764e8d80db27deda046dee90c35e51a21e9, for dsi video mode

Signed-off-by: leihuang <leihuang@bestechnic.com>
Change-Id: I8716879640647bd992711c3afd053d37708375cf

--- a/bes2600w/components/components.gni
+++ b/bes2600w/components/components.gni
@@ -47,6 +47,6 @@ declare_args() {
   bes_wifi_test = false
   bes_fs_test = false
   bes_ui_test = false
-  bes_ability_test = true
+  bes_ability_test = false
   bes_histreamer_test = false
 }
