--- a/bes2600w/components/drivers/touch/BUILD.gn
+++ b/bes2600w/components/drivers/touch/BUILD.gn
@@ -17,6 +17,7 @@ import("../drivers.gni")
 static_library("touch") {
   sources = [
     "touch.c",
+    "touch_fts.c",
     "touch_ztw523.c",
   ]
 
