feat: adapt for xts demo
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: Ic5e93c648aebba7a792ffd75b79b7d58fda8fbcc

--- a/bes2600w/hals/utils/file/BUILD.gn
+++ b/bes2600w/hals/utils/file/BUILD.gn
@@ -17,5 +17,8 @@ static_library("hal_file_static") {
   sources = [ "src/hal_file.c" ]
   include_dirs = [
     "//utils/native/lite/hals/file",
+    "//kernel/liteos_m/components/fs/littlefs/",
+    "//kernel/liteos_m/components/fs/",
+    "//third_party/littlefs",
   ]
 }
