--- a/bes2600w/components/drivers/display/BUILD.gn
+++ b/bes2600w/components/drivers/display/BUILD.gn
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 group("display") {
-  deps = [
+  public_deps = [
     "hal:hal_display",
     "hdi:hdi_display",
   ]
