--- a/bes2600w/hals/security/huks/BUILD.gn
+++ b/bes2600w/hals/security/huks/BUILD.gn
@@ -17,5 +17,6 @@ static_library("huks_adapter") {
   ]
   include_dirs = [
     "//base/security/huks/interfaces/innerkits/huks_lite/",
+    "//third_party/mbedtls/include/mbedtls",
   ]
 }
