feat: 适配LWIP，保证原有 LWIP 选项不改变
Signed-off-by: SimonLi <likailong@huawei.com>

--- a/bes2600w/components/net/lwip-2.1/BUILD.gn
+++ b/bes2600w/components/net/lwip-2.1/BUILD.gn
@@ -31,6 +31,8 @@ import("lwip_porting.gni")
 
 config("lwip_depends") {
   defines = [ "_BSD_SOURCE = 1" ]
+  defines += [ "LITEOS_LWIP = 1" ]
+  defines += [ "CHECKSUM_BY_HARDWARE=1" ]
 }
 
 static_library("lwip") {
