--- a/bes2600w/components/net/lwip-2.1/lwip_porting.gni
+++ b/bes2600w/components/net/lwip-2.1/lwip_porting.gni
@@ -36,6 +36,7 @@ LWIP_PORTING_FILES = [
   "$LWIP_PORTING_DIR/porting/src/netdb_porting.c",
   "$LWIP_PORTING_DIR/porting/src/sockets_porting.c",
   "$LWIP_PORTING_DIR/porting/src/sys_arch.c",
+  "$LWIP_PORTING_DIR/porting/src/ethernetif.c",
   "$LWIP_PORTING_DIR/enhancement/src/fixme.c",
   "$LWIP_PORTING_DIR/enhancement/src/lwip_ifaddrs.c",
 ]
