build: 将flash.h头文件暴露出来，给其他模块使用
Signed-off-by: SimonLi <likailong@huawei.com>

--- a/bes2600/liteos_m/components/drivers/flash/BUILD.gn
+++ b/bes2600/liteos_m/components/drivers/flash/BUILD.gn
@@ -26,5 +26,5 @@ hdf_driver("flash") {
 }
 
 config("public") {
-  include_dirs = [ "//device/bestechnic/bes2600w/liteos_m/sdk/bsp/include/rtos/liteos/liteos_m/kal/cmsis" ]
+  include_dirs = [ "." ]
 }
