--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -66,6 +66,7 @@ board_cflags = [
     "-DOS_HWI_MAX_NUM=96",
     "-DCONFIG_DISPLAY_A064",
     "-DLFS_MAX_OPEN_DIRS=32",
+    "-DLOSCFG_BASE_CORE_HILOG=1",
     "-DMBEDTLS_CMSIS_FILE=\"rtos/liteos/liteos_m/kal/cmsis/cmsis_os.h\""
 ]
 
