--- a/bes2600/liteos_m/components/utils/BUILD.gn
+++ b/bes2600/liteos_m/components/utils/BUILD.gn
@@ -21,6 +21,7 @@ kernel_module("sys_adapter") {
   sources = [
     "src/hm_sys.c",
     "src/platform.c",
+    "src/printf.c",
   ]
 
   include_dirs = [ "include" ]
