--- a/bes2600/liteos_m/sdk/BUILD.gn
+++ b/bes2600/liteos_m/sdk/BUILD.gn
@@ -48,4 +48,10 @@ config("public") {
     "bsp/platform/hal/best2003",
   ]
   ldflags = [ "-Wl,-T" + rebase_path("bsp/out/best2600w_liteos/_best2001.lds") ]
+  libs = [
+    "bspbest2600w_liteos",
+    "c",
+    "m",
+    "stdc++",
+  ]
 }
