fix: update components drivers and ui
Signed-off-by: leihuang <leihuang@bestechnic.com>
Change-Id: I83aaa87b2f4e67236f6a8ddfc787d81679982d41

--- a/bes2600/liteos_m/components/drivers/display/hdi/BUILD.gn
+++ b/bes2600/liteos_m/components/drivers/display/hdi/BUILD.gn
@@ -20,6 +20,7 @@ hdf_driver("hdi_display") {
     "display_layer.c",
   ]
   include_dirs = [
+    "../hal",
     "//drivers/peripheral/display/interfaces/include",
     "//drivers/peripheral/display/hal",
     "//drivers/peripheral/base",
