feat: watch dog func fix
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I43158c488b8a760a6626763f488925292d2dc425

--- a/bes2600/liteos_m/components/watchdog/BUILD.gn
+++ b/bes2600/liteos_m/components/watchdog/BUILD.gn
@@ -14,5 +14,5 @@
 import("//drivers/adapter/khdf/liteos_m/hdf.gni")
 
 kernel_module("watchdog") {
-  sources = [ "hi_watchdog.c" ]
+  sources = [ "watchdog.c" ]
 }
