fix: stronger build
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I9c3997f8def011fff3686d93445d96b500ea817e

--- a/bes2600/BUILD.gn
+++ b/bes2600/BUILD.gn
@@ -159,6 +159,7 @@ if (ohos_kernel_type == "liteos_m") {
         libs += [ "bsp${bsp_target_name}" ]
 
         deps += [ "//build/lite:ohos" ]
+        deps += [ "//build/lite:product" ]
       }
 
       # link target lib into bin
