--- a/.gitignore
+++ b/.gitignore
@@ -99,18 +99,12 @@ lib/
 Build dir
 /out/
 *.pre
-# *.bin
+*.bin
 *.yaml
 
-bes2600/burn_tools/release_bin
-bes2600/burn_tools/write_flash_gui
-bes2600/burn_tools/auto_build_tool
-bes2600/*.tar.gz
-bes2600/liteos_m/sdk/bsp/out/best2600w_liteos/bsp.mri
-bes2600/liteos_m/sdk/bsp/out/best2600w_liteos/*.bin
-bes2600/liteos_m/sdk/bsp/out/best2600w_liteos/*.bin
-bes2600/liteos_m/sdk/bsp/out/best2600w_liteos/*.lds
-bes2600/liteos_m/sdk/bsp/out/log
+*.tar.gz
+write_flash_gui*
+*/liteos_m/sdk/bsp/
 
 # configuration file
 # *.ini
