feat: support printf
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I500caaabd45fa9a19197e7fddc7369a3b4d4782d

--- a/bes2600w/components/utils/BUILD.gn
+++ b/bes2600w/components/utils/BUILD.gn
@@ -22,6 +22,7 @@ static_library("sys_adapter") {
   sources = [
     "src/hm_sys.c",
     "src/platform.c",
+    "src/printf.c",
   ]
 
   public_configs = [ ":sys_adapter_config" ]
