--- a/bes2600/liteos_m/sdk/bsp/platform/hal/Makefile
+++ b/bes2600/liteos_m/sdk/bsp/platform/hal/Makefile
@@ -1007,3 +1007,6 @@ ifneq ($(BT_CLKOUT_IOMUX_INDEX),)
 IOMUX_CFG_FLAGS += -DBT_CLKOUT_IOMUX_INDEX=$(BT_CLKOUT_IOMUX_INDEX)
 endif
 
+CHIP_WIFITSF_VER ?= 1
+CFLAGS_hal_wifitsf.o += -DCHIP_WIFITSF_VER=$(CHIP_WIFITSF_VER)
+
