--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,9 @@ Build dir
 
 *.tar.gz
 write_flash_gui*
-*/liteos_m/sdk/bsp/
+*.lds
+*/liteos_m/sdk/bsp/out/log
+*.mri
 
 # configuration file
 # *.ini
