fix: xts wifi case
Signed-off-by: zetingxu <zetingxu@bestechnic.com>
Change-Id: I13a3be90e7298cbc485b9b8086660379087d2280

--- a/bes2600w/components/components.gni
+++ b/bes2600w/components/components.gni
@@ -49,4 +49,5 @@ declare_args() {
   bes_ui_test = false
   bes_ability_test = false
   bes_histreamer_test = false
+  bes_bluetooth_test = false
 }
