--- a/bes2600w/components/net/lwip-2.1/lwip_porting.gni
+++ b/bes2600w/components/net/lwip-2.1/lwip_porting.gni
@@ -39,6 +39,7 @@ LWIP_PORTING_FILES = [
   "$LWIP_PORTING_DIR/porting/src/ethernetif.c",
   "$LWIP_PORTING_DIR/enhancement/src/fixme.c",
   "$LWIP_PORTING_DIR/enhancement/src/lwip_ifaddrs.c",
+  "$LWIP_PORTING_DIR/enhancement/src/dhcps.c",
 ]
 
 if (enable_ohos_kernel_liteos_m_shell) {
