--- a/bes2600/liteos_m/sdk/BUILD.gn
+++ b/bes2600/liteos_m/sdk/BUILD.gn
@@ -31,6 +31,8 @@ import("//build/lite/config/component/lite_component.gni")
 import("//build/lite/config/subsystem/lite_subsystem.gni")
 import("//kernel/liteos_m/liteos.gni")
 
+out_product_path = "${ohos_root_path}out/${board_name}/${product_name}"
+
 # build sdk into lib
 build_ext_component("build_sdk_into_lib") {
   exec_path = rebase_path(".")
@@ -51,10 +53,38 @@ build_ext_component("build_sdk_into_lib") {
   command = "./tools/build_lib_into_hmos_out.sh ${build_tz} ${build_mini} ${ohos_build_type} ${product_path} ${flash_size}"
 }
 
+foreach(bin_file, bin_list) {
+  build_enable = bin_file.enable
+  exe_bin = "${bin_file.elf_name}_${board_name}"
+  if (build_enable == "true") {
+    bsp_target_name = bin_file.bsp_target_name
+
+    # copy lib generate by bsp target to out directory.
+    copy_lib_name = "gen_bsp_lib_${exe_bin}"
+    print("copy_lib_name:", copy_lib_name)
+    build_ext_component(copy_lib_name) {
+      exec_path = rebase_path(".")
+      out_lib_path = "${out_product_path}/libs/"
+      bsp_lib_path = "./bsp/out/${bsp_target_name}/libbsp${bsp_target_name}.a"
+      command = "cp -rf ${bsp_lib_path} ${out_lib_path}"
+      deps = [ ":build_sdk_into_lib" ]
+    }
+  }
+}
+
 module_name = "bsp_config"
 
 kernel_module(module_name) {
-  deps = [ ":build_sdk_into_lib" ]
+  deps = []
+  foreach(bin_file, bin_list) {
+    build_enable = bin_file.enable
+      exe_bin = "${bin_file.elf_name}_${board_name}"
+      if (build_enable == "true") {
+        # copy lib generate by bsp target to out directory.
+        copy_lib_name = "gen_bsp_lib_${exe_bin}"
+        deps += [ ":${copy_lib_name}" ]
+      }
+  }
 }
 
 config("public") {
