feat: release bsp 622f5d0723 ohos_sdk  80623366
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: Ic8a45a240d1e73393f78c367d78ebf16427f230b

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -15,9 +15,7 @@ if (ohos_kernel_type == "liteos_m") {
   import("//kernel/liteos_m/liteos.gni")
   module_name = get_path_info(rebase_path("."), "name")
   module_group(module_name) {
-    modules = [
-      "hals",
-    ]
+    modules = [ "hals" ]
     if (defined(LOSCFG_SOC_SERIES_BES2600)) {
       modules += [ "bes2600" ]
     }
