--- a/bes2600/BUILD.gn
+++ b/bes2600/BUILD.gn
@@ -84,7 +84,8 @@ if (ohos_kernel_type == "liteos_m") {
 
   build_ext_component("init_burn_tools") {
     exec_path = rebase_path("pack_tools")
-    command = "./init_burn_tools.sh ./../../ ${out_product_path} ${product_path}"
+    command =
+        "./init_burn_tools.sh ./../../ ${out_product_path} ${product_path}"
   }
 
   # config bin from vendor/bestechnic/<product_name>/config.json
@@ -118,6 +119,7 @@ if (ohos_kernel_type == "liteos_m") {
         foreach(force_link_lib, bin_file.force_link_libs) {
           ldflags += [ "-l${force_link_lib}" ]
         }
+        ldflags += [ "-lbsp${bsp_target_name}" ]
         ldflags += [ "-Wl,--no-whole-archive" ]
 
         libs = [
@@ -126,10 +128,9 @@ if (ohos_kernel_type == "liteos_m") {
           "stdc++",
         ]
 
-        libs += [ "bsp${bsp_target_name}" ]
-
         deps += [ "//build/lite:ohos" ]
         deps += [ "//build/lite:product" ]
+        deps += [ "//kernel/liteos_m:kernel" ]
       }
 
       # link target lib into bin
@@ -298,7 +299,8 @@ if (ohos_kernel_type == "liteos_m") {
   # pack write flash gui to write_flash_gui-<time>.tar.gz
   build_ext_component("pack_flash_gui") {
     exec_path = rebase_path("pack_tools")
-    command = "./pack_burn_tools.sh ${out_product_path} ${pack_burn} ${product_name}"
+    command =
+        "./pack_burn_tools.sh ${out_product_path} ${pack_burn} ${product_name}"
     deps = [ ":${update_product_yaml}" ]
 
     # bin configed from vendor/bestechnic/<product_name>/config.json
