fix: remove mbedtls thread alt
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I37c0a4148d03caab05bd1071490dc9484b348d17

--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -72,10 +72,10 @@ board_cflags = [
     "-DLOSCFG_BASE_CORE_HILOG=1",
     "-DMBEDTLS_CMSIS_FILE=\"rtos/liteos/liteos_m/kal/cmsis/cmsis_os.h\"",
     "-DIFNAMSIZ=1024",
-    "-DMBEDTLS_TEST_NULL_ENTROPY",
-    "-DMBEDTLS_NO_DEFAULT_ENTROPY_SOURCES",
-    "-DMBEDTLS_THREADING_C",
-    "-DMBEDTLS_THREADING_ALT",
+    # "-DMBEDTLS_TEST_NULL_ENTROPY",
+    # "-DMBEDTLS_NO_DEFAULT_ENTROPY_SOURCES",
+    # "-DMBEDTLS_THREADING_C",
+    # "-DMBEDTLS_THREADING_ALT",
     "-g",
 ]
 
