fix: 将适配mbedtls的配置项暴露出去
Signed-off-by: likailong <likailong@huawei.com>

--- a/hals/mbedtls/BUILD.gn
+++ b/hals/mbedtls/BUILD.gn
@@ -34,6 +34,7 @@ lite_library("mbedtls_static") {
 
 group("mbedtls") {
   public_deps = [ ":mbedtls_static" ]
+  public_configs = [ ":mbedtls_config" ]
 }
 
 ndk_lib("mbedtls_ndk") {
